results/SVCOMP/specgen/log-athrow1-2024_02_24_09_29_55.txt
class A extends Exception {}

class athrow1 {
  //@ ensures \result == true;
  public static boolean func() {
    A a = new A();
    try {
      throw a;
    } catch (Exception e) {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/athrow1.java:12: error: unreachable statement
    return true;
    ^
1 error

class A extends Exception {}

class athrow1 {
  //@ ensures \result == false;
  public static boolean func() {
    A a = new A();
    try {
      throw a;
    } catch (Exception e) {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/athrow1.java:12: error: unreachable statement
    return true;
    ^
1 error

class A extends Exception {}

class athrow1 {
  //@ ensures \result == false;
  public static boolean func() {
    A a = new A();
    try {
      throw a;
    } catch (Exception e) {
      return false;
    }
  }
}

